<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Map">

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="400dp"
        android:layout_height="469dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="148dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mapT1"
        android:layout_width="410dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="110dp"
        android:background="@android:color/darker_gray"
        android:text="@string/mapT1"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="17dp"
        app:layout_constraintBottom_toTopOf="@+id/mapView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/mapB1"
        android:layout_width="90dp"
        android:layout_height="88dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:drawableTop="@drawable/paper"
        android:text="@string/mapB1"
        android:textSize="9dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapT1" />

    <Button
        android:id="@+id/mapB2"
        android:layout_width="90dp"
        android:layout_height="88dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:drawableTop="@drawable/plastic"
        android:text="@string/mapB2"
        android:textSize="9dp"
        app:layout_constraintStart_toEndOf="@+id/mapB1"
        app:layout_constraintTop_toBottomOf="@+id/mapT1" />

    <Button
        android:id="@+id/mapB3"
        android:layout_width="90dp"
        android:layout_height="88dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:drawableTop="@drawable/electronic"
        android:text="@string/mapB3"
        android:textSize="9dp"
        app:layout_constraintStart_toEndOf="@+id/mapB2"
        app:layout_constraintTop_toBottomOf="@+id/mapT1" />

    <Button
        android:id="@+id/mapB4"
        android:layout_width="90dp"
        android:layout_height="88dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:drawableTop="@drawable/glass"
        android:text="@string/mapB4"
        android:textSize="9dp"
        app:layout_constraintStart_toEndOf="@+id/mapB3"
        app:layout_constraintTop_toBottomOf="@+id/mapT1" />

    <Button
        android:id="@+id/mapB5"
        android:layout_width="90dp"
        android:layout_height="88dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:drawableTop="@drawable/med"
        android:text="@string/mapB5"
        android:textSize="9dp"
        app:layout_constraintStart_toEndOf="@+id/mapB4"
        app:layout_constraintTop_toBottomOf="@+id/mapT1" />


</android.support.constraint.ConstraintLayout>