<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    >


    <TextView
        android:id="@+id/textView5"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/mapT1"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="15sp" />


    <HorizontalScrollView
        android:id="@+id/horizon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_1"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="90dp"

                android:background="@color/common_google_signin_btn_text_dark_default"
                android:drawableTop="@drawable/paper"
                android:text="@string/mapB1"
                android:textAlignment="center"
                android:textSize="10sp" />

            <Button
                android:id="@+id/button_2"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:background="@color/common_google_signin_btn_text_dark_pressed"
                android:drawableTop="@drawable/plastic"
                android:text="@string/mapB2"
                android:textAlignment="center"
                android:textSize="10sp" />

            <Button
                android:id="@+id/button_3"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:background="@color/common_google_signin_btn_text_dark_pressed"
                android:drawableTop="@drawable/electronic"
                android:text="@string/mapB3"
                android:textAlignment="center"
                android:textSize="10sp" />

            <Button
                android:id="@+id/button_4"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:background="@color/common_google_signin_btn_text_dark_pressed"
                android:drawableTop="@drawable/glass"
                android:text="@string/mapB4"
                android:textAlignment="center"
                android:textSize="10sp" />

            <Button
                android:id="@+id/button_5"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:background="@color/common_google_signin_btn_text_dark_pressed"
                android:drawableTop="@drawable/med"
                android:text="@string/mapB5"
                android:textAlignment="center"
                android:textSize="10sp" />




        </LinearLayout>
    </HorizontalScrollView>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="439dp"
        app:srcCompat="@drawable/map" />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />


</LinearLayout>