<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:text="@string/ProfileT1"
            android:textAlignment="center"
            android:textColor="@color/common_google_signin_btn_text_light_pressed"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            app:srcCompat="@android:drawable/ic_menu_info_details"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <Space
            android:layout_width="match_parent"
            android:layout_height="150dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ProfileT2"
            android:textAlignment="center"
            android:textColor="@color/common_google_signin_btn_text_light_pressed"
            android:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="350dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:background="@drawable/button_rounded"
            android:text="@string/secb1"
            android:textAlignment="center"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textSize="15sp"
            android:textStyle="bold"
            android:typeface="normal"  />
    </LinearLayout>
</LinearLayout>