<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    >


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#228B22		"
                android:text="@string/bestT1"
                android:textAlignment="center"


                android:textColor="@color/common_google_signin_btn_text_dark_default"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="#228B22	"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="74dp"
                    android:layout_weight="1"
                    android:text="@string/bestT2"
                    android:layout_gravity="bottom"
                    android:textAlignment="center"
                    android:textColor="@color/common_google_signin_btn_text_dark_default" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_weight="1"
                    android:layout_gravity="bottom"
                    android:src="@drawable/astana"
                    app:civ_border_color="#FF000000"
                    app:civ_border_width="10dp" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="77dp"
                    android:layout_weight="1"
                    android:text="@string/bestT3"
                    android:layout_gravity="bottom"
                    android:textAlignment="center"
                    android:textColor="@color/common_google_signin_btn_text_dark_default" />
            </LinearLayout>

            <ListView
                android:layout_width="match_parent"
                android:layout_height="614dp" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>